force-app/main/default/objects/Campaign/fields/P2P_Mass_Participation_Appeal__c.field-meta.xml
<CustomField>
    <fullName>P2P_Mass_Participation_Appeal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P2P/Mass Participation Appeal</label>
    <type>Checkbox</type>
</CustomField>