force-app/main/default/objects/Campaign/fields/P2P_Platform__c.field-meta.xml
<CustomField>
    <fullName>P2P_Platform__c</fullName>
    <description>Platform that the campaign was run through e.g. Everyday Hero, Funraisin, Go Fundraise etc</description>
    <inlineHelpText>Platform that the campaign was run through</inlineHelpText>
    <label>P2P Platform</label>
    <length>100</length>
    <type>Text</type>
</CustomField>