force-app/main/default/objects/Campaign/fields/P2P_Team_ID__c.field-meta.xml
<CustomField>
    <fullName>P2P_Team_ID__c</fullName>
    <description>Used for P2P fundraising sites</description>
    <inlineHelpText>Used for P2P fundraising sites</inlineHelpText>
    <label>P2P Team ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>