force-app/main/default/objects/Campaign/fields/Parent_of_Parent_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Parent_of_Parent_Campaign__c</fullName>
    <formula>Parent.Parent.Name</formula>
    <label>Parent of Parent Campaign</label>
    <type>Text</type>
</CustomField>