force-app/main/default/objects/Campaign/fields/Parent_Platform_Key__c.field-meta.xml
<CustomField>
    <fullName>Parent_Platform_Key__c</fullName>
    <formula>Parent.md_npsp_pack__Platform_Key__c</formula>
    <label>Parent Platform Key</label>
    <type>Text</type>
</CustomField>