force-app/main/default/objects/Campaign/fields/Portal_Title__c.field-meta.xml
<CustomField>
    <fullName>Portal_Title__c</fullName>
    <inlineHelpText>This name will appear on the CQ Safe form and is used for the family &amp; volunteer portal. Choose a clear, friendly and unique name for easy recognition and to avoid confusion.</inlineHelpText>
    <label>Portal Title</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>