force-app/main/default/objects/Campaign/fields/Program_Amount_Fundable__c.field-meta.xml
<CustomField>
    <fullName>Program_Amount_Fundable__c</fullName>
    <inlineHelpText>The amount available for direct funding of this program.  Note this includes staffing, and may include some other indirect costs.</inlineHelpText>
    <label>Program Amount Fundable</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>