force-app/main/default/objects/Campaign/fields/Program_Funders_and_funding_Notes__c.field-meta.xml
<CustomField>
    <fullName>Program_Funders_and_funding_Notes__c</fullName>
    <inlineHelpText>Who is funding this program or considering to?  Is their anything we need to know about it?</inlineHelpText>
    <label>Program Funders and funding Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>