force-app/main/default/objects/Campaign/fields/Program_Funding_Proposed__c.field-meta.xml
<CustomField>
    <fullName>Program_Funding_Proposed__c</fullName>
    <inlineHelpText>The amount of funding that has been proposed for this program.  This covers all grants and the like.</inlineHelpText>
    <label>Program Funding Proposed</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>