force-app/main/default/objects/Campaign/fields/Program_Funding_Recieved__c.field-meta.xml
<CustomField>
    <fullName>Program_Funding_Recieved__c</fullName>
    <inlineHelpText>The amount of funding that has been officially received, or been approved by foundations etc for payment.</inlineHelpText>
    <label>Program Funding Recieved</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>