force-app/main/default/objects/Campaign/fields/Program_Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Program_Sponsorship__c</fullName>
    <label>Program Sponsorship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>