force-app/main/default/objects/Campaign/fields/Protect_Name__c.field-meta.xml
<CustomField>
    <fullName>Protect_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C_Protect Name</label>
    <type>Checkbox</type>
</CustomField>