force-app/main/default/objects/Campaign/fields/Re_forecast_Amount__c.field-meta.xml
<CustomField>
    <fullName>Re_forecast_Amount__c</fullName>
    <description>Re-forecast amount</description>
    <label>Re-forecast Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>