force-app/main/default/objects/Campaign/fields/referral__c.field-meta.xml
<CustomField>
    <fullName>referral__c</fullName>
    <label>Referral</label>
    <length>255</length>
    <type>Text</type>
</CustomField>