force-app/main/default/objects/Campaign/fields/Registrations_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Registrations_Cancellation__c</fullName>
    <inlineHelpText>Last Date and Time a Event registration can be cancelled</inlineHelpText>
    <label>Registrations Cancellation</label>
    <type>DateTime</type>
</CustomField>