force-app/main/default/objects/Campaign/fields/Registrations_Closed__c.field-meta.xml
<CustomField>
    <fullName>Registrations_Closed__c</fullName>
    <inlineHelpText>Date and time Event registrations close</inlineHelpText>
    <label>Registrations Closed</label>
    <type>DateTime</type>
</CustomField>