force-app/main/default/objects/Campaign/fields/Registrations_Open__c.field-meta.xml
<CustomField>
    <fullName>Registrations_Open__c</fullName>
    <inlineHelpText>Date and time Event can accept registrations</inlineHelpText>
    <label>Registrations Open</label>
    <type>DateTime</type>
</CustomField>