force-app/main/default/objects/Campaign/fields/Registrations_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Registrations_Remaining__c</fullName>
    <label>Registrations Remaining</label>
    <summarizedField>Registration_Type__c.Registrations_Remaining__c</summarizedField>
    <summaryForeignKey>Registration_Type__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>