force-app/main/default/objects/Campaign/fields/Retreat_Volunteer_Hours__c.field-meta.xml
<CustomField>
    <fullName>Retreat_Volunteer_Hours__c</fullName>
    <formula>FamiliesAttended__c *2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retreat Volunteer Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>