force-app/main/default/objects/Campaign/fields/RTF_Created__c.field-meta.xml
<CustomField>
    <fullName>RTF_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RTF Created</label>
    <type>Checkbox</type>
</CustomField>