force-app/main/default/objects/Campaign/fields/RVSP__c.field-meta.xml
<CustomField>
    <fullName>RVSP__c</fullName>
    <label>RSVP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>