force-app/main/default/objects/Campaign/fields/SchoolContactEmail__c.field-meta.xml
<CustomField>
    <fullName>SchoolContactEmail__c</fullName>
    <label>School Contact Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>