force-app/main/default/objects/Campaign/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <inlineHelpText>a Donation to Camp Quality or an internal purchase by Camp Quality</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Donation</fullName>
            </value>
            <value>
                <fullName>Purchase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>