force-app/main/default/objects/Campaign/fields/Staff_Camp_Attendee_TEST__c.field-meta.xml
<CustomField>
    <fullName>Staff_Camp_Attendee_TEST__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pulling volunteer staff member attendance role</description>
    <inlineHelpText>Pulling volunteer staff member attendance role</inlineHelpText>
    <label>Staff Camp Attendee TEST</label>
    <referenceTo>Volunteer_Attendance__c</referenceTo>
    <relationshipLabel>Volunteer Attendance</relationshipLabel>
    <relationshipName>Volunteer_Attendance</relationshipName>
    <type>Lookup</type>
</CustomField>