force-app/main/default/objects/Campaign/fields/Staff_Test__c.field-meta.xml
<CustomField>
    <fullName>Staff_Test__c</fullName>
    <description>staff from volunteer attendance</description>
    <label>Staff Test</label>
    <length>50</length>
    <type>Text</type>
</CustomField>