force-app/main/default/objects/Campaign/fields/Sub_Fund__c.field-meta.xml
<CustomField>
    <fullName>Sub_Fund__c</fullName>
    <label>Sub Fund</label>
    <length>255</length>
    <type>Text</type>
</CustomField>