force-app/main/default/objects/Campaign/fields/Subcode__c.field-meta.xml
<CustomField>
    <fullName>Subcode__c</fullName>
    <formula>if ( ISBLANK(Parent.Subcode_Campaign__c), if (ISBLANK(Subcode_Campaign__c), 
if ( ISBLANK(Parent.External_ID__c ) , if (ISBLANK(External_ID__c),&apos;&apos;,&apos;A&apos;+ External_ID__c) ,&apos;A&apos;+ Parent.External_ID__c ),
Subcode_Campaign__c),

Parent.Subcode_Campaign__c  )</formula>
    <label>Subcode Master</label>
    <type>Text</type>
</CustomField>