force-app/main/default/objects/Campaign/fields/Subcode_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Subcode_Campaign__c</fullName>
    <inlineHelpText>Use this field to set the NAV Subcode for this campaign.</inlineHelpText>
    <label>Subcode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>