force-app/main/default/objects/Campaign/fields/Supplying_Organisation_Contact__c.field-meta.xml
<CustomField>
    <fullName>Supplying_Organisation_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplying Organisation Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>