force-app/main/default/objects/Campaign/fields/Supplying_Primary_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Supplying_Primary_Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplying Primary Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>