force-app/main/default/objects/Campaign/fields/Survey_URL__c.field-meta.xml
<CustomField>
    <fullName>Survey_URL__c</fullName>
    <label>Survey URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>