force-app/main/default/objects/Campaign/fields/Test_Staff_Camp__c.field-meta.xml
<CustomField>
    <fullName>Test_Staff_Camp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pulling Staff Participation Role</description>
    <inlineHelpText>Pulling Staff Participation Role</inlineHelpText>
    <label>Test Staff Camp</label>
    <referenceTo>Volunteer_Attendance__c</referenceTo>
    <relationshipLabel>Staff Participation Role</relationshipLabel>
    <relationshipName>Staff_Participation_Role</relationshipName>
    <type>Lookup</type>
</CustomField>