force-app/main/default/objects/Campaign/fields/Test_Volunteer_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Test_Volunteer_Attendance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Volunteer Attendance</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Volunteer_Attendance__c.Participation_Role__c</field>
            <operation>equals</operation>
            <value>Camp Leader, Staff</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Volunteer_Attendance__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns1</relationshipName>
    <type>Lookup</type>
</CustomField>