force-app/main/default/objects/Campaign/fields/Test_Volunteer_Camp__c.field-meta.xml
<CustomField>
    <fullName>Test_Volunteer_Camp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pulling Camp leader or Staff Member</description>
    <inlineHelpText>Pulling Camp leader or Staff Member</inlineHelpText>
    <label>Test Volunteer Camp</label>
    <referenceTo>Volunteer_Attendance__c</referenceTo>
    <relationshipLabel>Volunteer Attendance Role LU</relationshipLabel>
    <relationshipName>Volunteer_Attendance_Role_LU</relationshipName>
    <type>Lookup</type>
</CustomField>