force-app/main/default/objects/Campaign/fields/URLEventImg__c.field-meta.xml
<CustomField>
    <fullName>URLEventImg__c</fullName>
    <label>URLEventImg</label>
    <length>72000</length>
    <type>Html</type>
</CustomField>