force-app/main/default/objects/Campaign/fields/Venue_Address__c.field-meta.xml
<CustomField>
    <fullName>Venue_Address__c</fullName>
    <formula>Location_Venue__r.BillingStreet +  Location_Venue__r.BillingCity  +Location_Venue__r.BillingState + Location_Venue__r.BillingPostalCode</formula>
    <label>Venue Address</label>
    <type>Text</type>
</CustomField>