force-app/main/default/objects/Campaign/fields/Venue_Lat__c.field-meta.xml
<CustomField>
    <fullName>Venue_Lat__c</fullName>
    <formula>Location_Venue__r.BillingLatitude</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Venue Lat</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>