force-app/main/default/objects/Campaign/fields/Venue_Long__c.field-meta.xml
<CustomField>
    <fullName>Venue_Long__c</fullName>
    <formula>Location_Venue__r.BillingLongitude</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Venue Long</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>