force-app/main/default/objects/Campaign/fields/Volunteer_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Attendance__c</fullName>
    <label>Volunteer Attendance</label>
    <summaryFilterItems>
        <field>Volunteer_Attendance__c.Attendance__c</field>
        <operation>equals</operation>
        <value>Attended</value>
    </summaryFilterItems>
    <summaryForeignKey>Volunteer_Attendance__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>