force-app/main/default/objects/Campaign/fields/Volunteer_Hours_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Hours_Confirmed__c</fullName>
    <label>Volunteer Hours Confirmed</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>