force-app/main/default/objects/Campaign/fields/Volunteer_Hours_Confirmed_By__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Hours_Confirmed_By__c</fullName>
    <label>Volunteer Hours Confirmed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>