force-app/main/default/objects/Campaign/fields/Volunteer_Hours_Total__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Hours_Total__c</fullName>
    <label>Volunteer Hours Total</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>