force-app/main/default/objects/Campaign/fields/Volunteer_Invite_Description__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Invite_Description__c</fullName>
    <label>Volunteer Invite Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>