force-app/main/default/objects/Campaign/fields/Volunteer_Min_Fill_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Min_Fill_Percentage__c</fullName>
    <formula>Volunteers_Accepted_Attended__c / Volunteers_Required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volunteer Fill Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>