force-app/main/default/objects/Campaign/fields/Volunteer_Portal_Event_URL__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Portal_Event_URL__c</fullName>
    <formula>$Setup.My_Camp_Quality_Settings__c.Community_Base_URL__c &amp; &apos;/portalpage?p=volunteerEvent&amp;s=volunteerPortal&amp;e=&apos; + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volunteer Portal Event URL</label>
    <type>Text</type>
</CustomField>