force-app/main/default/objects/Campaign/fields/Volunteers_Accepted_Attended__c.field-meta.xml
<CustomField>
    <fullName>Volunteers_Accepted_Attended__c</fullName>
    <label>Volunteers Accepted/Attended</label>
    <summarizedField>Registration_Type__c.Families_Accepted_Attended__c</summarizedField>
    <summaryFilterItems>
        <field>Registration_Type__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Volunteer</value>
    </summaryFilterItems>
    <summaryForeignKey>Registration_Type__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>