force-app/main/default/objects/Campaign/fields/Volunteers_Required__c.field-meta.xml
<CustomField>
    <fullName>Volunteers_Required__c</fullName>
    <formula>if( text(Event_Type__c) = &quot;Junior Camp&quot;,  Family_Registrations_Accepted__c  + 5, 
if( text(Event_Type__c) = &quot;Middle Camp&quot;, Family_Registrations_Accepted__c/2 +5,
if( text(Event_Type__c) = &quot;Family Camp&quot;,4,
if( text(Event_Type__c) = &quot;Family Fun Day&quot;,2,
if( text(Event_Type__c) = &quot;Mini Camp&quot;, Family_Registrations_Accepted__c  + 5, 
0
)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Min Volunteers Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>