force-app/main/default/objects/Campaign/fields/Waitlist__c.field-meta.xml
<CustomField>
    <fullName>Waitlist__c</fullName>
    <inlineHelpText>Is there a Waitlist to be kept for this Event</inlineHelpText>
    <label>Waitlist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>