force-app/main/default/objects/Campaign/recordTypes/Age_Camp.recordType-meta.xml
<RecordType>
    <fullName>Age_Camp</fullName>
    <active>true</active>
    <label>Age Camp</label>
</RecordType>