force-app/main/default/objects/Campaign/recordTypes/Family_Camp.recordType-meta.xml
<RecordType>
    <fullName>Family_Camp</fullName>
    <active>true</active>
    <label>Family Camp</label>
</RecordType>