force-app/main/default/objects/Campaign/recordTypes/Family_Experience.recordType-meta.xml
<RecordType>
    <fullName>Family_Experience</fullName>
    <active>true</active>
    <label>Family Experience</label>
</RecordType>