force-app/main/default/objects/Campaign/recordTypes/Family_Fun_Day.recordType-meta.xml
<RecordType>
    <fullName>Family_Fun_Day</fullName>
    <active>true</active>
    <label>Family Fun Day</label>
</RecordType>