force-app/main/default/objects/Campaign/recordTypes/Family_Programs.recordType-meta.xml
<RecordType>
    <fullName>Family_Programs</fullName>
    <active>true</active>
    <label>Family Programs And Puppet Tours</label>
</RecordType>