force-app/main/default/objects/Campaign/recordTypes/Fundraising.recordType-meta.xml
<RecordType>
    <fullName>Fundraising</fullName>
    <active>true</active>
    <label>Fundraising</label>
</RecordType>