force-app/main/default/objects/Campaign/recordTypes/Individual_Giving.recordType-meta.xml
<RecordType>
    <fullName>Individual_Giving</fullName>
    <active>true</active>
    <label>Individual Giving</label>
</RecordType>