force-app/main/default/objects/Campaign/recordTypes/Leadership.recordType-meta.xml
<RecordType>
    <fullName>Leadership</fullName>
    <active>true</active>
    <description>For Alumni program events</description>
    <label>Leadership</label>
</RecordType>