force-app/main/default/objects/Campaign/recordTypes/NPSP_Campaigns.recordType-meta.xml
<RecordType>
    <fullName>NPSP_Campaigns</fullName>
    <active>true</active>
    <label>NPSP+ Campaigns</label>
</RecordType>