force-app/main/default/objects/Campaign/validationRules/Campaign_Type_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Campaign_Type_Validation</fullName>
    <active>false</active>
    <description>Please choose a campaign type</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Funraisin__Campaign_Type__c, &apos;&apos;), 
  ISBLANK(ParentId)
)</errorConditionFormula>
    <errorMessage>Please select a campaign type or a parent campaign.</errorMessage>
</ValidationRule>