force-app/main/default/objects/Campaign/validationRules/Must_have_financial_coding.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_have_financial_coding</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Account_No__c, &apos;No GL Allocated&apos;),
        ISPICKVAL(Cost_Centre__c, &apos;No Cost Centre Allocated&apos;),
        ISPICKVAL(Branch_Code__c, &apos;No Branch Code Allocated&apos;)
    ),
    NOT(Owner.FirstName = &apos;Mikaela&apos;)
)</errorConditionFormula>
    <errorMessage>Please check you have a GL Code, Cost Centre and Fundraising Branch Code. 
Once created, campaign financial coding cannot be changed. Please refer to Finance for campaign financial coding to be updated.</errorMessage>
</ValidationRule>