force-app/main/default/objects/Campaign/validationRules/Registrations_Open_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Registrations_Open_Only</fullName>
    <active>false</active>
    <errorConditionFormula>if( ISNULL(Registrations_Open__c), false,
if( (DATETIMEVALUE(StartDate) - Registrations_Open__c &gt; 91),true,false))</errorConditionFormula>
    <errorMessage>Timelines for events are that invites go out no more than 12 weeks out.</errorMessage>
</ValidationRule>