force-app/main/default/objects/Campaign/listViews/ACT_Events.listView-meta.xml
<ListView>
    <fullName>ACT_Events</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>Event_Type__c</columns>
    <columns>Registrations_Open__c</columns>
    <columns>Registrations_Closed__c</columns>
    <columns>Event_Group__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Group__c</field>
        <operation>equals</operation>
        <value>ACT</value>
    </filters>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>ACT Events</label>
    <sharedTo></sharedTo>
</ListView>