force-app/main/default/objects/Campaign/listViews/Blackmoore_s_Running_Festival.listView-meta.xml
<ListView>
    <fullName>Blackmoore_s_Running_Festival</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>blackmores</value>
    </filters>
    <label>Blackmore&apos;s Running Festival</label>
</ListView>