force-app/main/default/objects/Campaign/listViews/C4C_Calls_for_a_Cause_Campaigns.listView-meta.xml
<ListView>
    <fullName>C4C_Calls_for_a_Cause_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Fundraising</value>
    </filters>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>C4C</value>
    </filters>
    <label>C4C  - Calls for a Cause Campaigns</label>
</ListView>