force-app/main/default/objects/Campaign/listViews/Camp_In_Campaigns.listView-meta.xml
<ListView>
    <fullName>Camp_In_Campaigns</fullName>
    <columns>Branch_Code__c</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>Cost_Centre__c</columns>
    <columns>Account_No__c</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PARENT_NAME</field>
        <operation>equals</operation>
        <value>2021 Campaigns Head Office Camp In Parent</value>
    </filters>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>0120K000000yhDo</value>
    </filters>
    <filters>
        <field>Cost_Centre__c</field>
        <operation>equals</operation>
    </filters>
    <label>Camp In Campaigns</label>
</ListView>