force-app/main/default/objects/Campaign/listViews/Campaigns_Venue_No_Address.listView-meta.xml
<ListView>
    <fullName>Campaigns_Venue_No_Address</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Location_Venue__c</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.START_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2016</value>
    </filters>
    <filters>
        <field>Venue_Address__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Age_Camp,Campaign.Family_Programs,Campaign.Family_Camp,Campaign.Family_Fun_Day</value>
    </filters>
    <filters>
        <field>CAMPAIGN.STATUS</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </filters>
    <filters>
        <field>Venue_Address__c</field>
        <operation>equals</operation>
    </filters>
    <label>Campaigns Venue No Address</label>
</ListView>